2014-03-11	Malignant Manor <malignantmanor@users.sourceforge.net>
	* actorio.cc: Fix might timer not being started when reloading a saved game.

2014-03-02	Malignant Manor <malignantmanor@users.sourceforge.net>
	* Audio/Midi.cc, gamewin.*, gumps/AudioOptions_gump.cc: Stop music when
	  music conversion changes. Don't stop music when the midi driver changes
	  and oggs are playing. Don't try to play bg tracks if the settings aren't
	  capable of playing them properly.

2014-02-05	Dominik Reichardt <dominus@users.sourceforge.net>
	* usecode/ucinternal.cc: fixed regression from rev.7458 which crashed at the 
	  SI lightning storms - thanks wjp for finding the fix
	
2014-01-28	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* combat.cc: If there are no awake enemies nearby, AI will now gladly mop up
	  any sleeping foes around.
	* objs/egg.cc: Fixed bug #1874 "Fireball/Explosion trap triggers to late,
	  fires too long" by using weapon range as trap range and extending how far
	  offscreen traps can be and still fire.
	* objs/contain.cc,usecode/ucinternal.cc: Fixed bug #1863 "Delete intrinsic
	  needs to be able to find stuff in locked containers" by allowing locked
	  containers to have their contents searched and counted. This allows Elynor
	  to find and delete the contents of the sealed box. Also, reverted the hack
	  from revision 7438.

2014-01-28	Malignant Manor <malignantmanor@users.sourceforge.net>
	* audio/AudioMixer.cc: Fix uninitialized audio buffer in SDL 2.

2014-01-28	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* objs/chunks.cc: Added ugly hack to fix relative ordering of Y shapes and
	  Y depressions in SI Discipline shrine.
	* gamewin.cc: Added ugly hack to make Y depressions not clickable, so that
	  they can't be dragged and so that they do not prevent you from dragging a
	  Y shape.
	* usecode/ucinternal.cc: Added ugly hack to allow disarming the trap at the
	  temple of discipline. These 3 hacks "fix" bug #1855 "SI: Discipline Shrine